# Django_homework

./: .env.sample  .gitignore  README.md  data.json  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
accounts/: admin.py  forms.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
accounts/templates/accounts/: login.html  register.html
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blogpost_content_alter_blogpost_title.py
blog/templates/blog/: blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/fixtures/: catalog_data.json  categories.json  contacts.json  products.json
catalog/management/commands/: cache_ping.py  fill_catalog.py  runserver_info.py
catalog/migrations/: 0001_initial.py  0002_alter_product_options_product_is_published_and_more.py
catalog/templates/: base.html
catalog/templates/catalog/: base.html  contacts.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html  urls.py
catalog/templates/includes/: _menu.html
skystore/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: main.css
