[tool.poetry]
name = "django-homework"
version = "0.1.0"
description = ""
authors = ["drauzer89 <drauzer89@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.6"
psycopg2-binary = "^2.9.10"
python-decouple = "^3.8"
pillow = "^11.3.0"
redis = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
